fix: on drag the very last card of column, if the there are other cards to fetch, then they'll by displayed in the wrong column because we are not synchronized. That's why a placeholder solves it.

--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -5,9 +5,13 @@
         <ion-label class="column-title">New</ion-label>
 
         <div dragula="bag" [attr.status]="'new'">
-          <ion-card *ngFor="let flat of flatsNew$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-            <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
-          </ion-card>
+          <ng-container *ngFor="let flat of flatsNew$ | async; let last = last">
+            <ion-card mode="md" (click)="open(flat)" [attr.key]="flat.id">
+              <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
+            </ion-card>
+
+            <div *ngIf="last" class="placeholder-for-pagination"></div>
+          </ng-container>
         </div>
       </div>
     </section>
@@ -17,9 +21,13 @@
         <ion-label class="column-title">Viewings</ion-label>
 
         <div dragula="bag" [attr.status]="'viewing'">
-          <ion-card *ngFor="let flat of flatsViewing$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-            <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
-          </ion-card>
+          <ng-container *ngFor="let flat of flatsViewing$ | async; let last = last">
+            <ion-card mode="md" (click)="open(flat)" [attr.key]="flat.id">
+              <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
+            </ion-card>
+
+            <div *ngIf="last" class="placeholder-for-pagination"></div>
+          </ng-container>
         </div>
       </div>
     </section>
@@ -29,9 +37,13 @@
         <ion-label class="column-title">Applications</ion-label>
 
         <div dragula="bag" [attr.status]="'applied'">
-          <ion-card *ngFor="let flat of flatsApplied$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-            <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
-          </ion-card>
+          <ng-container *ngFor="let flat of flatsApplied$ | async; let last = last">
+            <ion-card mode="md" (click)="open(flat)" [attr.key]="flat.id">
+              <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
+            </ion-card>
+
+            <div *ngIf="last" class="placeholder-for-pagination"></div>
+          </ng-container>
         </div>
       </div>
     </section>
@@ -41,9 +53,13 @@
         <ion-label class="column-title">Rejected</ion-label>
 
         <div dragula="bag" [attr.status]="'rejected'">
-          <ion-card *ngFor="let flat of flatsRejected$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-            <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
-          </ion-card>
+          <ng-container *ngFor="let flat of flatsRejected$ | async; let last = last">
+            <ion-card mode="md" (click)="open(flat)" [attr.key]="flat.id">
+              <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
+            </ion-card>
+
+            <div *ngIf="last" class="placeholder-for-pagination"></div>
+          </ng-container>
         </div>
       </div>
     </section>
@@ -53,9 +69,13 @@
         <ion-label class="column-title">Winner</ion-label>
 
         <div dragula="bag" [attr.status]="'winning'">
-          <ion-card *ngFor="let flat of flatsWinning$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-            <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
-          </ion-card>
+          <ng-container *ngFor="let flat of flatsWinning$ | async; let last = last">
+            <ion-card mode="md" (click)="open(flat)" [attr.key]="flat.id">
+              <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
+            </ion-card>
+
+            <div *ngIf="last" class="placeholder-for-pagination"></div>
+          </ng-container>
         </div>
       </div>
     </section>
