feat: bookmark ids

--- a/app/src/app/popovers/options/options.component.html
+++ b/app/src/app/popovers/options/options.component.html
@@ -9,6 +9,10 @@
     <ion-label>New</ion-label>
   </ion-item>
 
+  <ion-item *ngIf="status !== 'bookmarked'" (click)="move('bookmarked')">
+    <ion-label>Bookmark</ion-label>
+  </ion-item>
+
   <ion-item *ngIf="status !== 'viewing'" (click)="move('viewing')">
     <ion-label>Viewing</ion-label>
   </ion-item>
