--- a/app/src/app/popovers/options/options.component.html
+++ b/app/src/app/popovers/options/options.component.html
@@ -37,6 +37,10 @@
     </ion-label>
   </ion-item-divider>
 
+  <ion-item (click)="openGoogleMap()" *ngIf="flat.data.location !== undefined">
+    <ion-label>Open in Google Map</ion-label>
+  </ion-item>
+
   <ion-item (click)="delete()">
     <ion-label>Delete</ion-label>
   </ion-item>
