feat: add link to about

--- a/app/src/app/pages/home/home.page.html
+++ b/app/src/app/pages/home/home.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title><app-title></app-title></ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="information-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
