feat: add about

--- a/app/src/app/pages/board/board.page.html
+++ b/app/src/app/pages/board/board.page.html
@@ -3,7 +3,7 @@
     <ion-title><app-title></app-title></ion-title>
 
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button [routerLink]="['/about']">
         <ion-icon name="information-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
