--- a/app/src/app/pages/about/about.page.html
+++ b/app/src/app/pages/about/about.page.html
@@ -8,10 +8,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <main>
-    <section class="ion-content">
+<ion-content>
+  <main class="ion-padding">
+    <section>
       <h1 class="ion-margin">About</h1>
+
+      <p class="ion-margin">Hey! I'm <a href="https://daviddalbusco.com">David</a>, a freelance web developer and consultant.</p>
 
       <p class="ion-margin">
         Once again I find myself having to find a new place to live in Zürich City and therefore once again I have to use search engines and platforms to browse
@@ -23,12 +25,15 @@
         months, again 😤.
       </p>
 
-      <p class="ion-margin">That's why I've created in a couple of days this prototype to help solve my problem.</p>
+      <p class="ion-margin">That's why I've created in a couple of (around four) days this prototype to help me solve my problem.</p>
 
       <p class="ion-margin">
-        Btw. I'm still looking for a new apartment in town, if you have any tips or looking for someone to takeover your rent, ping me 🙏.
+        Btw. I'm still looking for a new apartment in town, if you have any tips or looking for someone to takeover your rent,
+        <a href="mailto:david@fluster.io">ping me</a> 🙏.
       </p>
+    </section>
 
+    <section>
       <h1 class="ion-margin">Features</h1>
 
       <p class="ion-margin">A <a href="https://trello.com/">Trello</a> look alike board updated with new flat ads coming from the housing online market.</p>
@@ -40,4 +45,6 @@
       <p class="ion-margin">But hey, it's open source, <a href="https://github.com/peterpeterparker/watamato">pull requests</a> are welcome 😁.</p>
     </section>
   </main>
+
+  <app-footer></app-footer>
 </ion-content>
