--- a/app/src/app/pages/about/about.page.html
+++ b/app/src/app/pages/about/about.page.html
@@ -44,6 +44,16 @@
 
       <p class="ion-margin">But hey, it's open source, <a href="https://github.com/peterpeterparker/watamato">pull requests</a> are welcome 😁.</p>
     </section>
+
+    <section>
+      <h1 class="ion-margin">Open Source</h1>
+
+      <p class="ion-margin">Watamato is open source and released under the GNU Affero General Public License.</p>
+
+      <p class="ion-margin">
+        Check it out on <a href="https://github.com/peterpeterparker/watamato">GitHub <ion-icon name="logo-github" aria-label="GitHub logo"></ion-icon></a>.
+      </p>
+    </section>
   </main>
 
   <app-footer></app-footer>
