--- a/app/src/app/components/footer/footer.component.html
+++ b/app/src/app/components/footer/footer.component.html
@@ -1,11 +1,23 @@
 <img src="./assets/img/wave.svg" loading="lazy" role="presentation" />
 
 <main>
-  <section>
+  <section class="ion-padding">
     <article>
       <h2>Contact Me</h2>
 
-      <p>Have a project or application in mind? Drop me a message <a href="mailto:david@fluster.io">david@fluster.io</a></p>
+      <p>Have a project or application in mind? Drop me a message! <a href="mailto:david@fluster.io">david@fluster.io</a></p>
+    </article>
+
+    <article>
+      <h2>On The Web</h2>
+
+      <p class="social">
+        <a href="http://twitter.com/daviddalbusco/" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
+
+        <a href="http://daviddalbusco.com/" aria-label="Daviddalbusco.com"><ion-icon name="globe"></ion-icon></a>
+
+        <a href="http://github.com/peterpeterparker/" aria-label="GitHub"><ion-icon name="logo-github"></ion-icon></a>
+      </p>
     </article>
 
     <article>
@@ -20,7 +32,8 @@
       </div>
 
       <p class="ion-margin-top">
-        Looking for a simple, open source and free time tracking app ⏱️? Check out <a href="http://tietracker.app.link">Tie Tracker</a>
+        Looking for a simple, open source and free time tracking app ⏱️? Here is
+        <a href="http://tietracker.app.link">Tie Tracker <ion-icon name="open"></ion-icon></a>
       </p>
     </article>
   </section>
