feat: improve footer

--- a/app/src/app/components/footer/footer.component.html
+++ b/app/src/app/components/footer/footer.component.html
@@ -1,7 +1,16 @@
-<img src="./assets/img/wave.svg" loading="lazy" role="presentation" />
+<img src="./assets/img/wave.svg" loading="lazy" role="presentation" class="wave" />
 
 <main>
-  <section class="ion-padding">
+  <section class="ion-padding open-source">
+    <h3>
+      Watamato is
+      <a href="https://github.com/peterpeterparker/watamato" aria-label="Watamato on GitHub"
+        >Open Source <ion-icon name="logo-github" aria-label="GitHub logo"></ion-icon
+      ></a>
+    </h3>
+  </section>
+
+  <section class="ion-padding info">
     <article>
       <h2>Contact Me</h2>
 
@@ -9,12 +18,14 @@
     </article>
 
     <article>
-      <h2>On The Web</h2>
+      <h2>Social</h2>
+
+      <p>Portfolio, blog, chit-chat, code, etc.</p>
 
       <p class="social">
-        <a href="http://twitter.com/daviddalbusco/" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
-
         <a href="http://daviddalbusco.com/" aria-label="Daviddalbusco.com"><ion-icon name="globe"></ion-icon></a>
+
+        <a href="http://twitter.com/daviddalbusco/" aria-label="Twitter"><ion-icon name="logo-twitter"></ion-icon></a>
 
         <a href="http://github.com/peterpeterparker/" aria-label="GitHub"><ion-icon name="logo-github"></ion-icon></a>
       </p>
@@ -23,17 +34,16 @@
     <article>
       <h2>More Tools</h2>
 
-      <div class="deckdeckgo">
-        <p>
-          Need to create a presentation? Try out our web open source editor <a href="https://deckdeckgo.com">DeckDeckGo <ion-icon name="open"></ion-icon></a>
-        </p>
-
+      <p class="ion-margin-top apps">
+        Need to create a presentation? Try out our web open source editor
+        <a href="https://deckdeckgo.com">DeckDeckGo</a>
         <img src="https://deckdeckgo.com/assets/img/deckdeckgo-logo.svg" loading="lazy" role="presentation" aria-label="DeckDeckGo logo" />
-      </div>
+      </p>
 
-      <p class="ion-margin-top">
+      <p class="ion-margin-top apps">
         Looking for a simple, open source and free time tracking app ⏱️? Here is
-        <a href="http://tietracker.app.link">Tie Tracker <ion-icon name="open"></ion-icon></a>
+        <a href="http://tietracker.app.link">Tie Tracker</a>
+        <img src="https://tietracker.com/assets/icon/logo.svg" loading="lazy" role="presentation" aria-label="Tie Tracker logo" />
       </p>
     </article>
   </section>
