--- a/app/src/app/pages/about/about.page.html
+++ b/app/src/app/pages/about/about.page.html
@@ -51,7 +51,10 @@
       <p class="ion-margin">Watamato is open source and released under the GNU Affero General Public License.</p>
 
       <p class="ion-margin">
-        Check it out on <a href="https://github.com/peterpeterparker/watamato">GitHub <ion-icon name="logo-github" aria-label="GitHub logo"></ion-icon></a>.
+        Check it out on
+        <a href="https://github.com/peterpeterparker/watamato" aria-label="Watamato on GitHub"
+          >GitHub <ion-icon name="logo-github" aria-label="GitHub logo"></ion-icon></a
+        >.
       </p>
     </section>
   </main>
