--- a/app/src/app/components/footer/footer.component.scss
+++ b/app/src/app/components/footer/footer.component.scss
@@ -1,8 +1,16 @@
+@mixin link($height) {
+  background-image: linear-gradient(transparent 0%, transparent calc(50% - 9px), rgba(0, 0, 0, 0.35) calc(50% - 9px), rgba(0, 0, 0, 0.35) 100%);
+  background-size: 100% $height;
+  background-position: 0 0;
+  text-decoration: none;
+  color: currentColor;
+}
+
 :host {
   background: var(--ion-color-light);
 }
 
-> img {
+img.wave {
   display: block;
   padding-top: 48px;
 }
@@ -10,7 +18,19 @@
 main {
   background: var(--ion-color-light);
 
-  section {
+  section.open-source {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 64px 0;
+
+    a {
+      @include link(240%);
+    }
+  }
+
+  section.info {
     max-width: 960px;
     margin: auto;
 
@@ -18,20 +38,16 @@ main {
     grid-gap: 8px;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     grid-template-rows: auto;
-    justify-items: center;
+    justify-items: flex-start;
 
     grid-column-gap: 32px;
 
     article {
-      max-width: 320px;
-
-      div.deckdeckgo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+      p.apps {
         img {
-          width: 32px;
+          padding-left: 4px;
+          width: 24px;
+          vertical-align: middle;
         }
       }
     }
@@ -52,15 +68,7 @@ main {
 
       &:not(.social) {
         a {
-          &:after {
-            position: absolute;
-            content: "";
-            width: 100%;
-            top: 100%;
-            left: 0;
-            height: 0.0625rem;
-            background-color: currentcolor;
-          }
+          @include link(300%);
         }
       }
 
