feat: about button link

--- a/app/src/app/pages/board/board.page.html
+++ b/app/src/app/pages/board/board.page.html
@@ -3,8 +3,8 @@
     <ion-title><app-title></app-title></ion-title>
 
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/about']">
-        <ion-icon name="information-circle"></ion-icon>
+      <ion-button [routerLink]="['/about']" aria-label="About">
+        <ion-icon name="information-circle-outline" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
