feat: text and my personal use only

--- a/app/src/app/pages/about/about.page.html
+++ b/app/src/app/pages/about/about.page.html
@@ -16,8 +16,8 @@
       <p class="ion-margin">Hey! I'm <a href="https://daviddalbusco.com">David</a>, a freelance web developer and consultant.</p>
 
       <p class="ion-margin">
-        Once again I find myself having to find a new place to live in Zürich City and therefore once again I have to use search engines and platforms to browse
-        flats, that, at least to my eyes, were never upgraded, in terms of UX and even sometimes design, since the ’90s 🙈.
+        Once again I have to find a new place to live in Zürich City and therefore once again I have to use search engines and platforms to browse flats, that
+        were, at least to my eyes, never upgraded in terms of UX and even sometimes design, since the ’90s 🙈.
       </p>
 
       <p class="ion-margin">
@@ -25,10 +25,10 @@
         months, again 😤.
       </p>
 
-      <p class="ion-margin">That's why I've created in a couple of (around four) days this prototype to help me solve my problem.</p>
+      <p class="ion-margin">That's why I've created in a couple of days (around four) this prototype to help me solve my problem.</p>
 
       <p class="ion-margin">
-        Btw. I'm still looking for a new apartment in town, if you have any tips or looking for someone to takeover your rent,
+        Btw. I'm still looking for a new apartment in town. If you have any tips or looking for someone to takeover your rent,
         <a href="mailto:david@fluster.io">ping me</a> 🙏.
       </p>
     </section>
@@ -36,13 +36,21 @@
     <section>
       <h1 class="ion-margin">Features</h1>
 
-      <p class="ion-margin">A <a href="https://trello.com/">Trello</a> look alike board updated with new flat ads coming from the housing online market.</p>
+      <p class="ion-margin">
+        A <a href="https://trello.com/">Trello</a> look alike board automatically updated with incoming flat opportunities from the housing online market.
+      </p>
 
       <p class="ion-margin">
         Currently there are no filter available. It's a personal project and therefore these are applied at the source with my matching expectations.
       </p>
 
       <p class="ion-margin">But hey, it's open source, <a href="https://github.com/peterpeterparker/watamato">pull requests</a> are welcome 😁.</p>
+    </section>
+
+    <section>
+      <h1 class="ion-margin">Disclaimer</h1>
+
+      <p class="ion-margin">You are most welcomed to try out Watamato but do note that it has no other goals than serve my personal use only.</p>
     </section>
 
     <section>
