feat: text shorter

--- a/app/src/app/pages/about/about.page.html
+++ b/app/src/app/pages/about/about.page.html
@@ -25,7 +25,7 @@
         months, again 😤.
       </p>
 
-      <p class="ion-margin">That's why I've created in a couple of days (around four) this prototype to help me solve my problem.</p>
+      <p class="ion-margin">That's why I've created in a couple of days this prototype to help me solve my problem.</p>
 
       <p class="ion-margin">
         Btw. I'm still looking for a new apartment in town. If you have any tips or looking for someone to takeover your rent,
