feat: source color

--- a/app/src/theme/card.scss
+++ b/app/src/theme/card.scss
@@ -34,6 +34,10 @@ body {
         &.homegate {
           background: #ea3d43;
         }
+
+        &.flatfox {
+          background: #fe4c0a;
+        }
       }
 
       button {
