feat: text, no dev

--- a/app/src/app/components/footer/footer.component.html
+++ b/app/src/app/components/footer/footer.component.html
@@ -32,7 +32,7 @@
     </article>
 
     <article>
-      <h2>More Tools</h2>
+      <h2>More Apps</h2>
 
       <p class="ion-margin-top apps">
         Need to create a presentation? Try out our web open source editor
